--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Amit Burstein - Developer</title>
+  <meta name="description" content="Hi, my name is Amit Burstein.">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600">
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
   <style>
