Update to reflect life

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="copyright" content="Amit Burstein">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="description" content="Hi, my name is Amit Burstein.">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600">
-  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <style>
     body {
       margin-top: 100px;
@@ -75,7 +75,7 @@
 <body>
   <section id="intro">
     <h1 id="intro-text">Hi, my name is Amit Burstein.</h1>
-    <h2 id="intro-description">I'm a student at the University of Washington in Seattle, WA studying Computer Engineering. I love to code, listen to and write music, and learn new, exciting things.</h2>
+    <h2 id="intro-description">I'm a software engineer at Google. I love to code, listen to and write music, and learn new, exciting things.</h2>
     <div id="social">
       <a id="social-github" href="https://github.com/amitburst"><i class="ion-social-github"></i></a>
       <a id="social-linkedin" href="https://www.linkedin.com/in/amitburst"><i class="ion-social-linkedin"></i></a>
