Update Ionicons to 4.2.5

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script async src="https://www.google-analytics.com/analytics.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-  <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <style>
     html, body {
       height: 100%;
@@ -58,7 +57,7 @@
       margin-top: 40px;
     }
 
-    .social-buttons i {
+    .social-buttons ion-icon {
       font-size: 32px;
       margin: 15px;
     }
@@ -97,11 +96,12 @@
     </h2>
   </section>
   <section class="social-buttons" aria-label="Social buttons">
-    <a class="social-github" href="https://github.com/amitburst" aria-label="GitHub"><i class="ion-social-github"></i></a>
-    <a class="social-linkedin" href="https://www.linkedin.com/in/amitburst" aria-label="LinkedIn"><i class="ion-social-linkedin"></i></a>
-    <a class="social-twitter" href="https://twitter.com/amitburst" aria-label="Twitter"><i class="ion-social-twitter"></i></a>
-    <a class="social-instagram" href="https://instagram.com/amitburst" aria-label="Instagram"><i class="ion-social-instagram"></i></a>
-    <a class="social-email" href="mailto:amit.burstein@gmail.com" aria-label="Email"><i class="ion-paper-airplane"></i></a>
+    <a class="social-github" href="https://github.com/amitburst" aria-label="GitHub"><ion-icon name="logo-github"></ion-icon></a>
+    <a class="social-linkedin" href="https://www.linkedin.com/in/amitburst" aria-label="LinkedIn"><ion-icon name="logo-linkedin"></ion-icon></a>
+    <a class="social-twitter" href="https://twitter.com/amitburst" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
+    <a class="social-instagram" href="https://instagram.com/amitburst" aria-label="Instagram"><ion-icon name="logo-instagram"></ion-icon></a>
+    <a class="social-email" href="mailto:amit.burstein@gmail.com" aria-label="Email"><ion-icon name="paper-plane"></ion-icon></a>
   </div>
+  <script async src="https://unpkg.com/ionicons@4.2.5/dist/ionicons.js"></script>
 </body>
 </html>
