Add meta description tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="I'm a software engineer at Google. I love to code, listen to and write music, and learn new, exciting things.">
   <title>Amit Burstein - Software Engineer</title>
   <link href="favicon.png" rel="icon">
   <script>
