--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <meta name="description" content="I'm a software engineer at Google. I love to code, listen to and write music, and learn new, exciting things.">
   <title>Amit Burstein - Software Engineer</title>
   <link href="favicon.png" rel="icon">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92593179-1"></script>
   <script>
-    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'UA-92593179-1', 'auto');
-    ga('send', 'pageview');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-92593179-1');
   </script>
-  <script async src="https://www.google-analytics.com/analytics.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
   <style>
     html, body {
       height: 100%;
@@ -103,6 +104,6 @@
     <a class="social-instagram" href="https://instagram.com/amitburst" aria-label="Instagram"><ion-icon name="logo-instagram"></ion-icon></a>
     <a class="social-email" href="mailto:amit.burstein@gmail.com" aria-label="Email"><ion-icon name="paper-plane"></ion-icon></a>
   </div>
-  <script async src="https://unpkg.com/ionicons@4.2.5/dist/ionicons.js"></script>
+  <script async src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
