Fix deprecated Ionicons URL

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="I'm a software engineer at Google. I love to code, listen to and write music, and learn new, exciting things.">
   <title>Amit Burstein - Software Engineer</title>
   <link href="favicon.png" rel="icon">
+  <script async src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92593179-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -104,6 +105,5 @@
     <a class="social-instagram" href="https://instagram.com/amitburst" aria-label="Instagram"><ion-icon name="logo-instagram"></ion-icon></a>
     <a class="social-email" href="mailto:amit.burstein@gmail.com" aria-label="Email"><ion-icon name="paper-plane"></ion-icon></a>
   </div>
-  <script async src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
