Support text underlining in Safari

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     .google {
       text-decoration: underline #4285f4;
+      -webkit-text-decoration: underline #4285f4;
     }
 
     .social-buttons {
