--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <meta name="description" content="I'm a software engineer at Google. I love to code, listen to and write music, and learn new, exciting things.">
   <title>Amit Burstein - Software Engineer</title>
   <link href="favicon.png" rel="icon">
-  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap&text=ABGHIacdefghilmnorstuvwxy%20.%2C%27" rel="stylesheet">
   <style>
     html, body {
+      font: 400 20px/1.6 'AvenirNextLTW01-Regular', 'Avenir Next', sans-serif;
+      font-feature-settings: 'kern' 1;
+      font-kerning: normal;
+      -webkit-text-size-adjust: 100%;
       height: 100%;
     }
 
@@ -23,25 +25,23 @@
       padding: 0 24px;
     }
 
-    h1, h2 {
-      font-family: 'Open Sans', sans-serif;
-    }
-
     .intro {
-      max-width: 640px;
+      max-width: 648px;
       text-align: center;
     }
 
     .intro-text {
       color: #73a117;
       font-size: 48px;
-      font-weight: 300;
+      font-weight: 500;
     }
 
     .intro-description {
       color: #6a737b;
       font-size: 21px;
       font-weight: 400;
+      margin: 0 auto;
+      max-width: 548px;
     }
 
     .google {
